Fixed bug that cut off top of form when on mobile.

--- a/BasicForm/css/styles.css
+++ b/BasicForm/css/styles.css
@@ -14,7 +14,6 @@ form {
 }
 
 .form-class {
-    margin-top: 50px;
     position: absolute;
     top: 50%;
     left: 50%;
